--- a/CODE/ETLInstagram.ipynb
+++ b/CODE/ETLInstagram.ipynb
@@ -93,7 +93,7 @@
     "# Getting folder names for each chat in order to iterate through later\n",
     "\n",
     "# insert your Instagram handle here:\n",
-    "insta_account = 'REDACTED\n",
+    "insta_account = 'REDACTED'\n",
     "\n",
     "parent_directory = r'C:\\Users\\marco\\JUPYTER\\TextSentimentAnalysis\\instagram-{}\\messages\\inbox'.format(insta_account)\n",
     "\n",
@@ -295,7 +295,7 @@
     "# Getting folder names for each chat in order to iterate through later\n",
     "\n",
     "# insert your Facebook handle here:\n",
-    "fb_account = 'marcosgrillo'\n",
+    "fb_account = 'REDACTED'\n",
     "\n",
     "parent_directory = r'C:\\Users\\marco\\JUPYTER\\TextSentimentAnalysis\\facebook-{}\\your_activity_across_facebook\\messages\\inbox'.format(fb_account)\n",
     "\n",
